--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730832.md#1" target="_blank">联想控股董事长柳传志卸任 “黑马”宁旻接班</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/170329073323100615-150x120.jpg" align ="left"></a>12月18日晚间，联想控股正式发布了柳传志退休的消息，被外界熟知的“联想少帅”杨元庆却无缘接班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank">复旦大学改章程删自由 学生集体唱校歌抗议</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-150x120.jpg" align ="left"></a>复旦大学大幅度阉割章程在社会上引发争议，也在复旦师生中引发不满可以抗议。有学生自发合唱校歌之行为，对校方拟修改大学章程的计划表示抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank">累陷冤狱8年 法轮功学员王怀富遭迫害离世</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-11-150x120.jpg" align ="left"></a>四川绵阳市法轮功学员王怀富被中共非法关押8次，被迫害累计8年半，最后被嘉州监狱注射大量不明药物，奄奄一息回家。2019年7月16日，王怀富含冤离世，终年71岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730384.md#1" target="_blank">【直播回放】台湾总统选举 首场电视政见会</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730384.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-18-at-10.30.57-pm-150x120.png" align ="left"></a>中华民国2020总统大选首场电视政见发表会今（18日）晚7时在华视登场，三组候选人包括总统蔡英文、国民党候选人韩国瑜、亲民党候选人宋楚瑜，首度同台讲述政见。新唐人电视台和大纪元将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729384.md#1" target="_blank">【翻墙必看】茂名易地建火葬场引发流血冲突</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729384.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-600x400-1-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
 
@@ -14,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729423.md#1" target="_blank">吉林访民出狱后续遭警方骚扰 生活在恐惧中</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-20-150x120.jpg" align ="left"></a>最近，吉林维权民众小雷（化名）向大纪元记者透露，刚出狱三个月的她一直受到地方“稳控”，目前流浪在外还不时会接到老家警察打来的骚扰电话。小雷表示，“这样的电话让人心生反感和恐惧！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729311.md#1" target="_blank">莱特希泽：美中协议以书面呈现 完全可执行</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729311.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LA7LC-150x120.jpg" align ="left"></a>周二（12月17日），美国贸易代表罗伯特·莱特希泽（Robert Lighthizer）表示，第一阶段的美中贸易协议是完全可以执行的，且协议将以书面方式说明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729410.md#1" target="_blank">【拍案惊奇】香港“被”字恐惧与黄色经济核弹</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3b843220ac075acbcdb7f90f2c5462fc-150x120.jpg" align ="left"></a>有人爆料，香港惩教署的“小榄精神病治疗中心”，最近被运入的“病人”，多了几倍！这些人是什么人，会遇到什么遭遇，引起了人们的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:13 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729379.md#1" target="_blank">川普若连任 北京将面对哪些经贸压力</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729379.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175359445-150x120.jpg" align ="left"></a>美国明年举行总统大选，华尔街分析专家认为川普（特朗普）总统将成功连任，并且预期川普在第二任期将加足马力推动经济政策，特别是对华贸易政策，北京将面对更大压力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729379.md#1" target="_blank">川普若连任 北京将面对哪些经贸压力</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729379.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20171025-Trump-SamiraBouaou-8818-1-150x120.jpg" align ="left"></a>美国明年举行总统大选，华尔街分析专家认为川普（特朗普）总统将成功连任，并且预期川普在第二任期将加足马力推动经济政策，特别是对华贸易政策，北京将面对更大压力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729318.md#1" target="_blank">美2020国防授权法案 关注中共干预台湾选举</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729318.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1309022005342192-150x120.jpg" align ="left"></a>周二（12月17日），美国参议院以86比8票表决通过经过参、众两院协调后的《2020财年国防授权法》综合版本，下一步是总统川普（特朗普）签字后即成法律。该法案包括支持台湾对抗中共军事威胁的内容，以及关注中共干预台湾大选的内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728703.md#1" target="_blank">台湾人为大陆游客展现的独特“风景线”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-14-taiwan-story_01-150x120.jpg" align ="left"></a>中国大陆游客自台湾花莲乘火车赴台北都要在宜兰县的“苏澳新站”火车站接驳游览车。当地法轮功学员每天到火车站，在游客们短暂停留时，在匆匆一走一过之间传递真相信息，日复一日，迄今已8年多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729036.md#1" target="_blank">穆迪：中国企业债务是全球经济最大威胁</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-152321502-600x400-150x120.jpg" align ="left"></a>著名评级机构穆迪公司的经济学家警告说，中国企业债是对全球经济的“最大威胁”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:19 AM							</td></tr>
@@ -26,10 +29,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729038.md#1" target="_blank">中共央行外汇占款连降16个月 降幅扩大</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729038.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/190806101400100311-150x120.jpg" align ="left"></a>中共央行12月16日下午公布数据显示，11月份中共央行外汇占款连续第16个月下降，降幅较10月份扩大。11月份中国外汇占款和外汇储备双双下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728740.md#1" target="_blank">抖音过滤内容 在美国受质疑 转往加拿大</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728740.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1073256498-150x120.jpg" align ="left"></a>网络视频平台抖音（TikTok）正在扩建其加拿大团队，尽管该平台已涉嫌按中共政府的需要过滤内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank">中共补贴企业数据曝光 中石化和广汽获最多</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909071515262198-150x120.jpg" align ="left"></a>中国企业2019年收到的国家补贴继续扩大，今年前9个月发放补贴款增长了15%，其中中石化和汽车制造商获得的补贴最多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank">沉寂一年正式复出 范冰冰连续两天受邀走红毯</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-957395718-150x120.jpg" align ="left"></a>去年因被举报偷税漏税遭官方重罚的大陆女星范冰冰，在沉寂一年后东山再起。据陆媒16日披露，范冰冰刚刚赴美为好莱坞影片《355》配音归国，又连着两天受邀走红毯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank">赵薇零滤镜大特写曝光 网民直呼看傻眼</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/zhaowei-huangyoulong-150x120.jpg" align ="left"></a>凭在《还珠格格》中饰演“小燕子”走红的大陆女星赵薇，日前在大陆综艺节目《演员请就位》中亮相时，被拍到零滤镜下尽显疲态的大特写，让网民直呼看傻眼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729007.md#1" target="_blank">债券多用于抵押融资 楼继伟放风或发特别国债</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729007.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1312310333481528-600x400-150x120.jpg" align ="left"></a>中共前财政部部长楼继伟日前表示，针对政府债券流动性不足，可以考虑大规模发行特别国债。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728882.md#1" target="_blank">【萧茗看世界】美中协议：美国大赢但有后患</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1148843006-150x120.jpg" align ="left"></a>大家好，我是萧茗。今天是2019年12月16日。今天我们来分析中美第一阶段贸易协议的意义。虽然和其他人比起来有点迟，但是我们从一个更宏观长远的角度来分析，希望带来一些新意。另外，昨天美国贸易代表和财政部长针对第一阶段的贸易协议，联合出了一个非同寻常的声明，可以说是美国历史上从未见过的，我们也来分析一下这件事。对于还不了解第一阶段贸易协议的观众，我们先简单介绍.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730296.md#1" target="_blank">瑞典环保少女晒德国坐车照 引发争议</a><br></h3>瑞典环保少女格雷塔日前搭火车回家时公布了一张她坐在火车地上的照片，结果却引发德国网民对虚伪与诚实的热烈讨论，连德国顶级政治人物都发表了意见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729434.md#1" target="_blank">四川内江5.2级地震 18人受伤8千户停电</a><br></h3>12月18日早上，四川内江市资中县发生5.2级地震。截至下午2时许，官方称，地震造成18人受伤，其中5人重伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729559.md#1" target="_blank">中共航母山东舰交付仪式 多名高官缺席</a><br></h3>日前，中共第一艘航空母舰山东舰交付海军。这次交付仪式打破了以往的几个惯例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729550.md#1" target="_blank">贵州煤矿事故致16死 四川渗水事故致5死</a><br></h3>12月18日，贵州安龙县广隆煤矿瓦斯爆炸搜救工作结束。此次事故，导致16名矿工死亡。而稍早前的四川煤矿渗水事故搜救工作也基本结束，5人死亡，13人获救。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:15 PM							</td></tr>
